src/objects/Pagination_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pagination_Range_LL__c</fullName>
        <label>Pagination Range - LL</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pagination_Range_UL__c</fullName>
        <label>Pagination Range - UL</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paginaton_Rate__c</fullName>
        <label>Paginaton Rate</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Pagination Rates</relationshipLabel>
        <relationshipName>Pagination_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pagination Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Pagination_Range_LL__c</columns>
        <columns>Pagination_Range_UL__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Paginaton_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pagination Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pagination Rates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>